--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_HOST = '127.0.0.1'
 MYSQL_PORT = 3306
 MYSQL_USER = 'root'
-MYSQL_PASS = 'Kusumah20!'
-MYSQL_DB = 'test_database'
+MYSQL_PASS = ''
+MYSQL_DB = 'simple_pos'
 
 JWT_KEY = 'ASDFGHJKL123456789'
